api-rest-axum/cargo_build_output.txt
   Compiling api-rest-axum v0.1.0 (D:\01-api-rest-axum\api-rest-axum)
error: expected identifier, found `...`
  --> src\dto\product_request.rs:10:35
   |
10 | pub struct CreateProductRequest { ... }
   |            --------------------   ^^^ expected identifier
   |            |
   |            while parsing this struct

error: expected identifier, found `...`
  --> src\dto\product_request.rs:13:35
   |
13 | pub struct UpdateProductRequest { ... }
   |            --------------------   ^^^ expected identifier
   |            |
   |            while parsing this struct

error: expected identifier
  --> src\dto\product_request.rs:10:35
   |
10 | pub struct CreateProductRequest { ... }
   |                                   ^

error: expected identifier
  --> src\dto\product_request.rs:13:35
   |
13 | pub struct UpdateProductRequest { ... }
   |                                   ^

error[E0428]: the name `CreateProductRequest` is defined multiple times
  --> src\dto\product_request.rs:19:1
   |
10 | pub struct CreateProductRequest { ... }
   | ------------------------------- previous definition of the type `CreateProductRequest` here
...
19 | pub struct CreateProductRequest {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `CreateProductRequest` redefined here
   |
   = note: `CreateProductRequest` must be defined only once in the type namespace of this module

error[E0428]: the name `UpdateProductRequest` is defined multiple times
  --> src\dto\product_request.rs:44:1
   |
13 | pub struct UpdateProductRequest { ... }
   | ------------------------------- previous definition of the type `UpdateProductRequest` here
...
44 | pub struct UpdateProductRequest {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UpdateProductRequest` redefined here
   |
   = note: `UpdateProductRequest` must be defined only once in the type namespace of this module

error[E0119]: conflicting implementations of trait `std::fmt::Debug` for type `product_request::CreateProductRequest`
  --> src\dto\product_request.rs:18:10
   |
 9 | #[derive(Debug, Deserialize, Validate, ToSchema)]  //  ajoute ToSchema
   |          ----- first implementation here
...
18 | #[derive(Debug, Deserialize, Validate, ToSchema)]
   |          ^^^^^ conflicting implementation for `product_request::CreateProductRequest`

error[E0119]: conflicting implementations of trait `std::fmt::Debug` for type `product_request::UpdateProductRequest`
  --> src\dto\product_request.rs:43:10
   |
12 | #[derive(Debug, Deserialize, Validate, ToSchema)]  //  ajoute ToSchema
   |          ----- first implementation here
...
43 | #[derive(Debug, Deserialize, Validate)]
   |          ^^^^^ conflicting implementation for `product_request::UpdateProductRequest`

error[E0282]: type annotations needed
  --> src\dto\product_request.rs:18:30
   |
18 | #[derive(Debug, Deserialize, Validate, ToSchema)]
   |                              ^^^^^^^^ cannot infer type
   |
   = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> src\dto\product_request.rs:43:30
   |
43 | #[derive(Debug, Deserialize, Validate)]
   |                              ^^^^^^^^ cannot infer type
   |
   = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0119, E0282, E0428.
For more information about an error, try `rustc --explain E0119`.
error: could not compile `api-rest-axum` (bin "api-rest-axum") due to 10 previous errors
